# dots

./: Cargo.toml  LICENSE  readme.md
src/: action.rs  app.rs  dots.rs  effect.rs  effects.rs  main.rs  physics.rs  scene.rs
src/common/: brain.rs  coord.rs  direction.rs  dna.rs  mod.rs  threadpool.rs
