[package]
name = "dots"
version = "0.1.0"
authors = ["Reed Debaets <reed.debaets@gmail.com>"]
build = "build.rs"

[[bin]]
name = "dots"

[dependencies]
piston = "*"
#piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
rand = "*"

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]
